--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     compile 'com.github.jjobes:slideDateTimePicker:1.0.2'
     compile 'com.github.traex.rippleeffect:library:1.3'
-    compile files('libs/commons-collections4-4.0.jar')
-    compile files('libs/commons-lang3-3.2.1.jar')
     compile 'com.jjoe64:graphview:4.0.1'
+    compile 'org.apache.commons:commons-collections4:4.0'
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
