--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'org.apache.commons:commons-collections4:4.0'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
