--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 24 22:31:12 SGT 2015
-sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
+#Mon Nov 30 09:15:40 SGT 2015
+sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
