--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 13 19:08:25 SGT 2015
-sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
+#Thu Dec 17 09:28:32 SGT 2015
+sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
