1. update reminder 2. update goal 3. update exercise page 4. DA and classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -146,7 +146,10 @@
             android:name=".BackgroundSensor.AccelerometerSensor"
             android:enabled="true"></service>
 
+        <service android:name=".HRStripBLE.BluetoothLeService" />
+
         <receiver android:name=".Reminder.AlarmService.MyReceiver" />
+
         <service android:name=".Reminder.AlarmService.MyAlarmService" />
     </application>
 
