1. update all ui 2. fix goal 3. fix step sensitivity 4. update db attribute 5. update graph 6. update exercise page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+'
     //circular progress bar
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
+    //circle button
+    compile 'com.github.markushi:circlebutton:1.1'
 }
