--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Dec 26 11:58:46 SGT 2015
-sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
+#sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
+sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
