--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('libs/a30sdk.jar')
+    compile project(':a30sdk')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     compile 'com.github.jjobes:slideDateTimePicker:1.0.2'
