--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -156,6 +158,14 @@
         <receiver android:name=".Reminder.AlarmService.MyReceiver" />
 
         <service android:name=".Reminder.AlarmService.MyAlarmService" />
+
+
+        <service android:name="com.choicemmed.a30.BleService" >
+        </service>
+
+        <activity
+            android:name=".UI.IChoiceActivity"
+            android:label="@string/title_activity_ichoice"></activity>
     </application>
 
 </manifest>
