--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 26 11:58:46 SGT 2015
-#sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
-sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
+#Thu Dec 31 09:14:09 SGT 2015
+sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
