--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 03 17:04:23 SGT 2016
-sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
+#Sat Jan 09 21:45:26 SGT 2016
+sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
