--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 18 09:45:09 SGT 2016
-sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
+#Thu Jan 21 23:12:33 SGT 2016
+sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
