--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
             android:label="@string/title_activity_health_profile_page" />
 
         <activity
-            android:name=".UI.MetalPage"
+            android:name=".UI.MedalPage"
             android:label="@string/title_activity_metal_page" />
         <activity
             android:name=".UI.HistoryPage"
