1. Update Logo 2. Fix DateTime class 3. Update Goal Add function 4. Update Sleep Graph 5. Update all Graph 6. Update DA -- Generate new id 7. [New] Activity Plan Page 8. [New] warm up & cool down -- coming soon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -200,6 +200,10 @@
             android:name=".Graph.MySleepDataGraphView"
             android:label="@string/title_activity_my_sleep_data_graph_view" >
         </activity>
+        <activity
+            android:name=".UI.ActivityPlanPage"
+            android:label="@string/title_activity_activity_plan_page" >
+        </activity>
     </application>
 
 </manifest>
