--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 28 10:36:51 SGT 2016
-sdk.dir=C\:\\Users\\Hexa-Jackson\\AppData\\Local\\Android\\sdk
+#Sat Jan 30 11:54:55 SGT 2016
+sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
