1. warm up & cool down in exercise 2. update DB ( goal and activity plan) 3. update server req *php too 4. update 2 icon -- common and recommend with new name 5. congragulation notification [coming soon] 6. Fix goal bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -204,6 +204,10 @@
             android:name=".UI.ActivityPlanPage"
             android:label="@string/title_activity_activity_plan_page" >
         </activity>
+        <activity
+            android:name=".UI.CongratulationPage"
+            android:label="@string/title_activity_congratulation_page" >
+        </activity>
     </application>
 
 </manifest>
