--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 15 16:42:49 SGT 2016
-sdk.dir=C\:\\Users\\JACKSON\\AppData\\Local\\Android\\sdk
+#Sun Feb 21 11:31:59 SGT 2016
+sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
