--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 21 11:31:59 SGT 2016
-sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
+#Sun Feb 21 22:24:13 SGT 2016
+sdk.dir=C\:\\Users\\JACKSON\\AppData\\Local\\Android\\sdk
