--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 22 21:40:06 SGT 2016
-sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
+#Wed Feb 24 14:37:01 SGT 2016
+sdk.dir=C\:\\Users\\JACKSON\\AppData\\Local\\Android\\sdk
