--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 24 15:53:20 SGT 2016
-sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
+#Thu Feb 25 14:37:32 SGT 2016
+sdk.dir=C\:\\Users\\JACKSON\\AppData\\Local\\Android\\sdk
