--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 02 11:31:09 SGT 2016
-sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
+#Sat Mar 05 14:55:11 SGT 2016
+sdk.dir=C\:\\Users\\JACKSON\\AppData\\Local\\Android\\sdk
