--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 17 19:10:08 SGT 2016
-sdk.dir=C\:\\Users\\JACKSON\\AppData\\Local\\Android\\sdk
+#Thu Mar 24 23:04:33 SGT 2016
+sdk.dir=C\:\\Users\\saiboon\\AppData\\Local\\Android\\sdk2
